[package]
name = "typewriters"
version = "0.1.0"
authors = [
    "Mariell Hoversholm <proximyst@proximyst.com>",
    "Professor Bloodstone <prof.bloodstone+git@gmail.com>",
]
edition = "2018"
publish = false

[dependencies]
snafu = "~0.6"
eyre = "~0.6"
stable-eyre = "~0.2"
tracing = "~0.1"
tracing-subscriber = "~0.2"
reqwest = "~0.11"
atom_syndication = "~0.9"
warp = "~0.3"
once_cell = "~1.5"
dotenv = "~0.15"
serde_json = "~1"

[dependencies.tokio]
version = "~1.1"
# TODO(Mariell Hoversholm): Reduce the features.
features = ["full"]

[dependencies.serde]
version = "~1"
features = ["derive"]

[dependencies.chrono]
version = "~0.4"
features = ["serde"]

