[package]
name = "typewriters"
version = "0.1.0"
authors = [
    "Mariell Hoversholm <proximyst@proximyst.com>",
    "Professor Bloodstone <prof.bloodstone+git@gmail.com>",
]
edition = "2018"
publish = false

[dependencies]
async-trait = "~0.1"
atom_syndication = "~0.9"
dotenv = "~0.15"
eyre = "~0.6"
getset = "~0.1"
once_cell = "~1.5"
serde_json = "~1"
snafu = "~0.6"
stable-eyre = "~0.2"
tracing = "~0.1"
tracing-subscriber = "~0.2"
warp = "~0.3"

# reqwest depends on this version of url.
reqwest = "=0.11.0"
url = "=2.2.0"

[dependencies.tokio]
version = "~1.1"
# TODO(Mariell Hoversholm): Reduce the features.
features = ["full"]

[dependencies.serde]
version = "~1"
features = ["derive"]

[dependencies.chrono]
version = "~0.4"
features = ["serde"]

[dev-dependencies]
mockito = "~0.29"
pretty_assertions = "~0.6"
maplit = "~1.0"
